--- a/src/template.html
+++ b/src/template.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
+    <title>ToDo-List</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <button id="home" class="btn">Home</button>
-            <button id="menu" class="btn">Menu</button>
-            <button id="about" class="btn">About</button>
-        </nav>
-    </header>
-    <div id="content">
-    </div>
+    
 </body>
 </html>
