create basic layout

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,32 @@
     <title>ToDo-List</title>
 </head>
 <body>
-    
+    <header>
+        <div id="heading-banner">
+            <h1>ToDo List</h1>
+        </div>
+    </header>
+    <main>
+        <section id="nav-pane-left">
+            <h4>Today</h4>
+            <h4>Favourites</h4>
+            <div id="projects">
+                <div id="project-header">
+                    <h4>Projects</h4>
+                </div>
+                <div id="project-list">
+                    <ul></ul>
+                </div>
+            </div>
+        </section>
+        <section id="content">
+            <a id="new-task" href="">
+                <div id="new-task-div">
+                    <p>New Task</p>
+                </div>
+            </a>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
