--- a/src/template.html
+++ b/src/template.html
@@ -9,8 +9,10 @@
     <header>
         <div id="heading-banner">
             <div id="todo-header">
+                <div id="todo-logo" class="logo"></div>
                 <h1>ToDo List</h1>
             </div>
+            <div id="user-logo" class="logo"></div>
         </div>
     </header>
     <main>
@@ -18,20 +20,20 @@
             <div id="today-header" class="nav-header">
                 <h4>Today</h4>
             </div>
-            <div id="favorites">
-                <div id="favorites-header" class="nav-header expandable">
+            <div id="favorites" class="expandable">
+                <div id="favorites-header" class="nav-header">
                     <h4>Favorites</h4>
                 </div>
                 <div id="favorite-list" >
                     <ul></ul>
                 </div>
             </div>
-            <div id="lists">
-                <div id="lists-header" class="nav-header expandable">
+            <div id="lists" class="expandable">
+                <div id="lists-header" class="nav-header">
                     <h4>Projects</h4>
                 </div>
-                <div id="list">
-                    <ul></ul>
+                <div>
+                    <ul id="list"></ul>
                 </div>
             </div>
         </section>
