--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
             <h1>ToDo Lists</h1>
         </div>
         <ul>
-            <li class="active list-item">
+            <li class="list-item">
                 <a href="#">
                     <img id="home-icon" src="" alt="home icon" class="icon">
                     <span>Home</span>
@@ -28,17 +28,29 @@
                 <button class="dropdown-btn">
                     <img id="favorites-icon" src="" alt="favorites icon" class="icon">
                     <span>Favorites</span>
-                    <img id="favorites-expand-icon" src="" alt="expand icon" class="icon">
+                    <img id="favorites-expand-icon" src="" alt="expand icon" class="icon expandable-icon">
                 </button>
-                <ul id="favourite-list" class="sub-list"></ul>
+                <ul id="favourite-list" class="sub-list">
+                    <div>
+                        <li>test</li>
+                        <li>test</li>
+                        <li>test</li>
+                    </div>
+                </ul>
             </li>
             <li class="list-item">
                 <button class="dropdown-btn">
                     <img id="projects-icon" src="" alt="projects icon" class="icon">
                     <span>Projects</span>
-                    <img id="projects-expand-icon" src="" alt="expand icon" class="icon">
+                    <img id="projects-expand-icon" src="" alt="expand icon" class="icon  expandable-icon">
                 </button>
-                <ul id="project-list" class="sub-list"></ul>
+                <ul id="project-list" class="sub-list">
+                    <div>
+                        <li>test 1</li>
+                        <li>test 2</li>
+                        <li>test 3</li>
+                    </div>
+                </ul>
             </li>
         </ul>
     </nav>
