--- a/src/template.html
+++ b/src/template.html
@@ -12,23 +12,23 @@
             <h1>ToDo Lists</h1>
         </div>
         <ul>
-            <li class="list-item">
+            <li id="home" class="list-item">
                 <a href="#">
                     <img id="home-icon" src="" alt="home icon" class="icon">
                     <span>Home</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li id="today" class="list-item">
                 <a href="#">
                     <img id="today-icon" src="" alt="today icon" class="icon">
                     <span>Today</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li id="favourites" class="list-item expandable">
                 <button class="dropdown-btn">
                     <img id="favorites-icon" src="" alt="favorites icon" class="icon">
                     <span>Favorites</span>
-                    <img id="favorites-expand-icon" src="" alt="expand icon" class="icon expandable-icon">
+                    <img id="favorites-expand-icon" src="" alt="expand icon" class="icon">
                 </button>
                 <ul id="favourite-list" class="sub-list">
                     <div>
@@ -38,17 +38,18 @@
                     </div>
                 </ul>
             </li>
-            <li class="list-item">
+            <li id="projects" class="list-item expandable">
                 <button class="dropdown-btn">
                     <img id="projects-icon" src="" alt="projects icon" class="icon">
                     <span>Projects</span>
-                    <img id="projects-expand-icon" src="" alt="expand icon" class="icon  expandable-icon">
+                    <img id="projects-expand-icon" src="" alt="expand icon" class="icon">
+                    <img src="" alt="add new project" id="add-project-icon" class="icon">
                 </button>
                 <ul id="project-list" class="sub-list">
                     <div>
-                        <li>test 1</li>
-                        <li>test 2</li>
-                        <li>test 3</li>
+                        <li>test</li>
+                        <li>test</li>
+                        <li>test</li>
                     </div>
                 </ul>
             </li>
