fix adding new project

--- a/src/template.html
+++ b/src/template.html
@@ -53,7 +53,10 @@
         <div id="projectModal" class="modal">
             <h1>Add Project</h1>
             <input id="project-name" type="text" placeholder="Project name" required>
-            <button id="add-project-btn">Add</button>
+            <div>
+                <button id="add-project-btn">Add</button>
+                <button id="cancel-btn">Cancel</button>
+            </div>
         </div>
     </main>
     <footer></footer>
