add default project

--- a/src/template.html
+++ b/src/template.html
@@ -45,7 +45,12 @@
                         <img src="" alt="add new project" id="add-project-icon" class="icon">
                     </button>
                     <ul id="projects-list" class="sub-list">
-                        <div></div>
+                        <div>
+                            <div class="project">
+                                <li id="defaultProject-0">Default</li>
+                                <img id="add-fav-icon" class="icon add-fav-icon" src="">
+                            </div>
+                        </div>
                     </ul>
                 </li>
             </ul>
@@ -57,6 +62,12 @@
                 <div>
                     <button id="add-project-btn">Add</button>
                     <button id="cancel-btn">Cancel</button>
+                </div>
+            </div>
+            <div id="task-list">
+                <div id="empty-task-list">
+                    <img src="" alt="Add Task" id="add-task-icon">
+                    <p>Add New Task</p>
                 </div>
             </div>
         </main>
