indicate active project

--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
                     </button>
                     <ul id="projects-list" class="sub-list show">
                         <div>
-                            <div class="project">
+                            <div class="project active">
                                 <li id="defaultProject-0">Default</li>
                                 <img id="add-fav-icon" class="icon add-fav-icon" src="">
                             </div>
