separate tasks based on project

--- a/src/template.html
+++ b/src/template.html
@@ -46,8 +46,8 @@
                     </button>
                     <ul id="projects-list" class="sub-list show">
                         <div>
-                            <div class="project active">
-                                <li id="defaultProject-0">Default</li>
+                            <div id="Default-0" class="project activeProject">
+                                <li>Default</li>
                                 <img id="add-fav-icon" class="icon add-fav-icon" src="">
                             </div>
                         </div>
