implement task completion feature

--- a/src/template.html
+++ b/src/template.html
@@ -39,6 +39,9 @@
                                 <li>Default</li>
                                 <img id="add-fav-icon" class="icon add-fav-icon" src="">
                             </div>
+                            <div id="Archive-9999" class="project">
+                                <li>Archive</li>
+                            </div>
                         </div>
                     </ul>
                 </li>
